# dns-wrapper

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: main.cpp
cmake/: Version.cmake
config/: config.ini  win32.reg
include/: args.hpp  common.h  config.hpp  daemon.hpp  enum.hpp  log.hpp  socket.hpp  util.hpp  version.h.in
include/bookkeeping/: ethmappings.hpp  peer.hpp  server.hpp
include/dns/: dnscommon.hpp  dnsheader.hpp  dnspacket.hpp  dnsquestion.hpp  dnsrecord.hpp  server.hpp
include/net/: if.hpp  netcommon.h  packet.hpp
include/rule/: action.hpp  common.h  condition.hpp  engine.hpp  expression.hpp  input.hpp  parse.hpp  rule.hpp  save.hpp  shm.hpp
include/tp/: customoptiondescription.hpp  optionprinter.hpp  sha256.hpp
include/unix/: netlink.hpp  signals.xh  unix.h  unixdaemon.hpp  unixutil.hpp
include/win32/: registry.hpp  regstream.hpp  service.hpp  win32config.hpp  win32daemon.hpp
src/: args.cpp  config.cpp  daemon.cpp  example.cpp  log.cpp  util.cpp
src/bookkeeping/: ethmappings.cpp  peer.cpp
src/dns/: dnsheader.cpp  dnspacket.cpp  dnsquestion.cpp  dnsrecord.cpp  server.cpp
src/net/: packet.cpp
src/rule/: action.cpp  condition.cpp  engine.cpp  expression.cpp  parse.cpp  rule.cpp  shm.cpp
src/tp/: customoptiondescription.cpp  optionprinter.cpp  sha256.cpp
src/unix/: netlink.cpp  signals.xc  unix.c  unixdaemon.cpp  unixif.cpp  unixutil.cpp
src/win32/: registry.cpp  regstream.cpp  service.cpp  win32config.cpp  win32daemon.cpp  win32daemonrunner.cpp  win32if.cpp  win32util.cpp
tests/: CMakeLists.txt  dummy.cpp
